--- a/fieldpro.css
+++ b/fieldpro.css
@@ -147,7 +147,7 @@ body {
 
 /*==================Info ====================*/
 
-.info {
+.inf {
   background-color: black;
   padding : 40px 20px ;
   text-align: left;
