--- a/fieldpro.css
+++ b/fieldpro.css
@@ -149,8 +149,23 @@ body {
 
 .inf {
   background-color: black;
-  padding : 40px 20px ;
+  padding : 40px ;
   text-align: left;
+}
+
+.inf h2{
+  color:#ddd;
+  font-weight: normal;
+  font-family:Arial, Helvetica, sans-serif;
+
+
+}
+.inf h3{
+  color:#ddd;
+  font-weight: normal;
+  font-family:Arial, Helvetica, sans-serif;
+  
+
 }
 /* ================= FOOTER ================= */
 .footer {
