--- a/fieldpro.css
+++ b/fieldpro.css
@@ -150,7 +150,7 @@ body {
 
 .inf {
   background-color: black;   /* dark greenish (not pure black) */
-  padding: 40px 20px;
+  padding: 40px ;
   text-align: left;
 }
 
